# fig_redis

./: CMakeLists.txt  Dockerfile.alpine  README.md  SECURITY.md  library.c  library.h
.github/workflows/: github-actions.yml
cmake/: CTestConfig.cmake  LICENSE.txt  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
cmake/modules/: GenerateRedisVersions.cmake
src/cli/: CMakeLists.txt  cli.c
src/lib/: CMakeLists.txt  config.h.in  library.c  library.h  redis_versions.h  version_redis.c  version_redis.h  windows_redis_versions.h
src/tests/: CMakeLists.txt  test.c  test_url_parsing.h
